--- a/css/style-tickets.css
+++ b/css/style-tickets.css
@@ -25,7 +25,7 @@ main {
 /*First container */
 
 #top-background {
-    background-image: url("../img/bg-gray.png");
+    background-image: url("../img/bg-gray2.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -51,12 +51,12 @@ main {
 } 
 
 #box {
-        border: 1px solid #d3d3d3;
-        margin-top: 30px;
-        font-size: 0.7em;
-        line-height: 20px;
-        background: white;
-        padding: 10px;
+    border: 1px solid white;
+    margin-top: 30px;
+    font-size: 0.7em;
+    line-height: 20px;
+    background: #d3d3d3;
+    padding: 10px;
 }
     
 #event-date {
@@ -159,6 +159,7 @@ footer {
     display: flex;
     background: #272a31;
     height: 200px;
+    font-size: small;
 }
 
 .footer-logo {
@@ -189,6 +190,16 @@ footer {
         padding-left: 200px;
         margin-right: auto;
         margin-left: auto;
+    }
+
+    .council {
+        height: 40px;
+        margin-right: 100px;
+    }
+
+    .main-cont {
+        margin-top: 80px;
+        margin-bottom: 80px;
     }
 
     #botton-tickets {
